# buddhaBrot

./: .gitignore  CMakeLists.txt  Makefile
include/: qdbmp.h  xorshift.h
src/: main.c  qdbmp.c  xorshift.c
